MADE not doing so hot on MNIST

--- a/homeworks/hw1/hw1_notebook.ipynb
+++ b/homeworks/hw1/hw1_notebook.ipynb
@@ -1349,7 +1349,46 @@
     "colab_type": "code",
     "id": "B5nBFeI7wJeN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1 test loss: 0.6881\n",
+      "epoch 2 test loss: 0.6821\n",
+      "epoch 3 test loss: 0.6737\n",
+      "epoch 4 test loss: 0.6589\n",
+      "epoch 5 test loss: 0.6254\n",
+      "epoch 6 test loss: 0.5571\n",
+      "epoch 7 test loss: 0.5005\n",
+      "epoch 8 test loss: 0.4748\n",
+      "epoch 9 test loss: 0.4601\n",
+      "epoch 10 test loss: 0.4494\n",
+      "epoch 11 test loss: 0.4406\n",
+      "epoch 12 test loss: 0.4328\n",
+      "epoch 13 test loss: 0.4255\n",
+      "epoch 14 test loss: 0.4182\n",
+      "epoch 15 test loss: 0.4107\n",
+      "epoch 16 test loss: 0.4029\n",
+      "epoch 17 test loss: 0.3944\n",
+      "epoch 18 test loss: 0.3851\n",
+      "epoch 19 test loss: 0.3751\n",
+      "epoch 20 test loss: 0.3644\n",
+      "epoch 21 test loss: 0.3533\n",
+      "epoch 22 test loss: 0.3422\n",
+      "epoch 23 test loss: 0.3318\n",
+      "epoch 24 test loss: 0.3224\n",
+      "epoch 25 test loss: 0.3144\n",
+      "epoch 26 test loss: 0.3078\n",
+      "epoch 27 test loss: 0.3023\n",
+      "epoch 28 test loss: 0.2977\n",
+      "epoch 29 test loss: 0.2939\n",
+      "epoch 30 test loss: 0.2907\n",
+      "epoch 31 test loss: 0.2879\n",
+      "epoch 32 test loss: 0.2855\n"
+     ]
+    }
+   ],
    "source": [
     "q2_save_results(2, 'b', q2_b)"
    ]
